--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>YAHYA STORE</title>
+    <h2>Nama: Mohammad Yahya Afandi</h2>
+    <h2>NIM: 19104579</h2>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yahyastore</title>
