--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>YAHYA STORE</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yahyastore</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -13,6 +12,8 @@
 
 <body>
     <div class="box">
+        <h2>Nama: Mohammad Yahya Afandi</h2>
+        <h2>NIM: 19104579</h2>
         <img src="images/1.png" alt="">
         <h1>Mouse Robot Type <mark>M205</mark></h1>
         <p><b>Spesifikasi:</b></p>
