--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <body>
     <div class="box">
-        <h2>Nama: Mohammad Yahya Afandi</h2>
-        <h2>NIM: 19104579</h2>
+    <h3>Nama: Mohammad Yahya Afandi</h3>
+    <h3>NIM: 19104579</h3>
+    <h3>Mata Kuliah: e-Bisnis</h3>
+    <h3>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h3>
         <img src="images/1.png" alt="">
         <h1>Mouse Robot Type <mark>M205</mark></h1>
         <p><b>Spesifikasi:</b></p>
