--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 
 <body>
-    <div class="box">
-    <h3>Nama: Mohammad Yahya Afandi</h3>
-    <h3>NIM: 19104579</h3>
-    <h3>Mata Kuliah: e-Bisnis</h3>
-    <h3>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h3>
+    <div class="card">
+        <h3>Nama: Mohammad Yahya Afandi</h3>
+        <h3>NIM: 19104579</h3>
+        <h3>Mata Kuliah: e-Bisnis</h3>
+        <h3>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h3>
+    </div>
+    <div class="box"
         <img src="images/1.png" alt="">
         <h1>Mouse Robot Type <mark>M205</mark></h1>
         <p><b>Spesifikasi:</b></p>
