--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 
 <body>
     <div class="card">
-        <h3>Nama: Mohammad Yahya Afandi</h3>
-        <h3>NIM: 19104579</h3>
-        <h3>Mata Kuliah: e-Bisnis</h3>
-        <h3>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h3>
+        <div class="container">
+        <h4>Nama: Mohammad Yahya Afandi</h4>
+        <h4>NIM: 19104579</h4>
+        <h4>Mata Kuliah: e-Bisnis</h4>
+        <h4>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h4>
+        </div>
     </div>
     <div class="box"
         <img src="images/1.png" alt="">
