--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-        <h4><b>Nama: Mohammad Yahya Afandi</b></h4>
-        <h4>NIM: 19104579</h4>
-        <h4>Mata Kuliah: e-Bisnis</h4>
-        <h4>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h4>
+        <h3>Nama: Mohammad Yahya Afandi</h3>
+        <h3>NIM: 19104579</h3>
+        <h3>Mata Kuliah: e-Bisnis</h3>
+        <h3>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h3>
     <div class="box"
         
         <img src="images/1.png" alt="">
