--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
         
     <div class="box"
-        <h4>Nama: Mohammad Yahya Afandi</h4>
+         <h4><b>Nama: Mohammad Yahya Afandi</b></h4>
         <h4>NIM: 19104579</h4>
         <h4>Mata Kuliah: e-Bisnis</h4>
         <h4>Dosen Pembimbing: Ahmad Sauqi, S.E, M.M</h4>
